--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button @click="increment()">
             Count is: {{ count }}
         </button>
+        <h1>
+           {{ message }} 
+        </h1>
     </div>
 
     <script src="./js/app.js"></script>
